templates/namespace-factory/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-name
  labels:
    app.kubernetes.io/managed-by: argocd

    platform.io/tenant: tenant-name
    platform.io/environment: dev

    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted

    istio-injection: enabled
